tests/fixtures/invalid/str_rshift_int.py
# Cannot right shift Str and Int
x: str = "hello" >> 1
